@@ -67,9 +67,7 @@ javaOptions in Test ++= Seq(
   "-XX:+IgnoreUnrecognizedVMOptions",
   "-Xmx2048m",
   "-XX:ReservedCodeCacheSize=384m",
-  "-XX:MaxMetaspaceSize=384m",
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-  "--add-opens=java.base/java.lang=ALL-UNNAMED"
+  "-XX:MaxMetaspaceSize=384m"
 )
 
 concurrentRestrictions in Global := Seq(
